tests/purs/failing/UnknownType.purs
-- @shouldFailWith UnknownName
module Main where

import Prelude

test :: Number -> Something
test = {}
