tests/purs/failing/UnknownType.out
Error found:
in module [33mMain[0m
at tests/purs/failing/UnknownType.purs:6:19 - 6:28 (line 6, column 19 - line 6, column 28)

  Unknown type [33mSomething[0m


See https://github.com/purescript/documentation/blob/master/errors/UnknownName.md for more information,
or to contribute content related to this error.

